nestapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    app: my-app  # Add this label
spec:
  containers:
  - name: my-app-container
    image: workat00/your-nestjs-app:latest
