postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    app: postgres
spec:
  containers:
  - name: postgres-container
    image: postgres:latest
    ports:
    - containerPort: 5432
