nestapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80       # External port to expose
    targetPort: 3000 # Port on the Pod to forward traffic to
